[tool.poetry]
name = "spotcamp"
version = "0.1.0"
description = ""
authors = ["Josiah Campbell <9521010+jocmp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
