[tool.poetry]
name = "spotcamp"
version = "0.1.0"
description = ""
authors = ["Josiah Campbell <9521010+jocmp@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
gunicorn = "^20.1.0"
spotipy = "^2.19.0"
bs4 = "^0.0.1"
structlog = "^21.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
autopep8 = "^1.6.0"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[pytest]
mock_use_standalone_module = true
